modified order flows for customer and producers. UI enhancments
